# ML

./: CMakeLists.txt  README.md
ML/: CMakeLists.txt
RL/: dpg.cpp  dpg.h  dqn.cpp  dqn.h  ppo.cpp  ppo.h  rl_basic.h
bayes/: README.md  bayes.cpp  bayes.h
bpnn/: bpnn.cpp  bpnn.h
dqn/: dqn.cpp  dqn.h  test  test.cpp
linear_model/: linear_model.h  perceptron.cpp  perceptron.h
logistics/: logistics.cpp  logistics.h
matrix/: bpnn.cpp  bpnn.h  bpnn.hpp  m1  makefile  matrix.hpp  test  test.cpp  test_bpnn  test_bpnn.cpp
perceptron/: perceptron.cpp  perceptron.h
policyGradient/: policyGradient.cpp  policyGradient.h  test.cpp
svm/: svm.cpp  svm.h
test/: makefile  number_classify  number_classify.cpp  test2.cpp  test_bayes  test_bayes.cpp  test_dpg  test_dqn  test_xor  test_xor.cpp
test/data/: number.txt  number_classify_weights.txt  text1  text2  xor2
utility/: utility.h
